# string-math

./: .gitignore  CMakeLists.txt  bracket.cc  bracket.h  dll_main.cc  expression.cc  expression.h  lexem.cc  lexem.h  math_bracket.cc  math_bracket.h  math_function.cc  math_function.h  operation.cc  operation.h  stdlex.h  string-math.sln  string-math.vcxproj  string-math.vcxproj.filters  string_math.cc  string_math.h  tests.cc
src/: expression.cpp  expression.hpp  expressionnode.hpp  expressionparser.cpp  expressionparser.hpp  main.cpp  mathexpression.cpp  mathexpression.hpp  node.cpp  node.hpp  operationregister.cpp  operationregister.hpp  parser.cpp  parser.hpp  string-math.cpp  string-math.hpp  stringiterator.cpp  stringiterator.hpp
tests/: CMakeLists.txt  definition.cpp  main.cpp  result.cpp  tests.cpp  tests.hpp
